Keep notification inside the main lint jobs
We don't want them listed as separate jobs; better to keep them to
steps.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,6 +23,10 @@ jobs:
         path: rails
     - run: bin/check-changelogs ./rails
     - run: bin/check-config-docs ./rails
+    - uses: zzak/action-discord@v4
+      if: always() && github.ref_name == 'main'
+      with:
+        webhook: ${{ secrets.DISCORD_WEBHOOK }}
   codespell:
     name: Check spelling all files with codespell
     runs-on: ubuntu-latest
@@ -41,13 +45,7 @@ jobs:
           pip install codespell==2.1.0
       - name: Check spelling with codespell
         run: codespell --ignore-words=codespell.txt --skip="./actionview/test/ujs/public/vendor/qunit.js,./actiontext/app/assets/javascripts/trix.js,./yarn.lock" || exit 1
-
-  notify:
-    runs-on: ubuntu-latest
-    if: always() && github.ref_name == 'main'
-    continue-on-error: true
-    needs: [rails-bin, codespell]
-    steps:
       - uses: zzak/action-discord@v4
+        if: always() && github.ref_name == 'main'
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
